@@ -98,8 +98,8 @@ public:
 	 * the right ctor. So on we add a non-templatized ctor with an exact
 	 * match for boolean option.
 	 */
-	option::option(bool &, char const * option_name,
-	               char short_name, char const * help_str);
+	option(bool &, char const * option_name,
+	       char short_name, char const * help_str);
 
 	~option();
 
@@ -121,6 +121,6 @@ template <> option::option(std::vector<std::string> &,
                            char const * option_name, char short_name,
                            char const * help_str, char const * arg_help_str);
 
-}; // namespace popt
+} // namespace popt
 
 #endif // POPT_OPTIONS_H
